--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -38,13 +38,18 @@
 		<artifactId>jaxb-api</artifactId>
 	</dependency>
 	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-test</artifactId>
-		<scope>test</scope>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-test</artifactId>
+	<scope>test</scope>
 	</dependency>
 	<dependency>
 		<groupId>org.slf4j</groupId>
 		<artifactId>slf4j-api</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>xmlunit</groupId>
+		<artifactId>xmlunit</artifactId>
+		<version>1.4</version>
 	</dependency>
 </dependencies>
 
